Release Notes

* 6/17/2015
  * added getPresignedURL

* 5/18/2015
  * added logrotate.d

* 4/29/2015
  * fixed S3I/F to return StatusCode

* 4/17/2015
  * returning an array of status code for getKeyPair

* 4/1/2015
  * moved remote host config to cfg
  * added getFileContent

* 3/30/2015
  * added S3 stuff provided by KuoHao
  * renamed to Http classes
  * using requests instead of urllib3

* 3/11/2015
  * added vomsrenew.sh
  * various bug fixes

* 3/2/2015
  * first import