@@ -1,5 +1,8 @@
 Release Notes
 
+* 6/22/2015
+  * added example for GET with getPresignedURL
+
 * 6/17/2015
   * added getPresignedURL
 
